# BlockPass

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
blockpass_contract/: Cargo.toml
blockpass_contract/src/: lib.rs  tests.rs
docs/: ARCHITECTURE.md
docs/submission/: README.md  user-feedback.md  user-interactions.md
eventpot_contract/: Cargo.toml  rust-toolchain.toml
eventpot_contract/src/: lib.rs  tests.rs
eventpot_contract/test_snapshots/tests/: buy_ticket_transfers_and_increments.1.json  cancel_after_partial_refunds_only_active.1.json  cancel_event_refunds_everyone_atomically.1.json  cannot_buy_when_not_on_sale.1.json  cannot_checkin_after_refund.1.json  check_in_marks_ticket.1.json  confirm_after_refund_pays_only_active.1.json  confirm_event_pays_organizer.1.json  get_unknown_event_errors.1.json  (+8 more)
public/contracts/: eventpot_contract.wasm
scripts/: deploy-contract.mjs  sync-wasm.mjs
src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
src/components/: BuyTicketPanel.tsx  CheckInScanner.tsx  CopyButton.tsx  EventCard.tsx  EventCreatedGate.tsx  EventSharePanel.tsx  OrganizerActions.tsx  PageMotion.tsx  PageSkeleton.tsx  PageTelemetry.tsx  TicketActions.tsx  WalletButton.tsx
src/hooks/: useEvent.ts  useWallet.ts
src/lib/: api.ts  checkin-token.ts  contract.ts  format.ts  server-contract.ts  stellar.ts  telemetry.ts
src/types/: index.ts
tests/: checkin-token.test.mjs  smoke.mjs
(+23 files in other folders)
