[package]
name = "blockpass_contract"
version = "0.1.0"
edition = "2021"
description = "BlockPass — Stellar ticket escrow with atomic batch refund"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "25.3.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["alloc", "testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = true
